# haxpes-pods

./: README.md  pyproject.toml
src/haxpes_pods/config/ipython/profile_default/: pixi.toml
src/haxpes_pods/config/ipython/profile_default/scripts/: gui-dev.sh  qs-dev.sh
src/haxpes_pods/config/ipython/profile_default/startup/: 00-startup.py  beamline.toml  devices.toml  existing_plans_and_devices.yaml  gui_config.toml  sim_conf.toml  xas_regions.toml  xps_regions.toml
